<resources>
    <string name="app_name">MediFast</string>
    <string name="saludo">Bienvenido!</string>
    <string name="nombre_doc">Dr</string>
    <string name="nombre">Nombre</string>
    <string name="correo">Correo</string>
    <string name="celular">Celular</string>
    <string name="edad">Edad</string>
    <string name="direccion">Direccion</string>
    <string name="pacientes">Pacientes</string>
    <string name="medifast">MediFast</string>
    <string name="login">Login</string>
    <string name="tu_salud_a_un_paso_de_distancia_citas_n_t_t_t_t_m_dicas_r_pidas_y_fiables">Tu salud, a un paso de distancia: citas \n \t \t \t \t médicas rápidas y fiables.</string>
    <string name="bienvenido">Bienvenido</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="registrate">Registrate</string>
    <string name="Descrpcion">La empatía y la comprensión son rasgos distintivos del enfoque del Dr. hacia la medicina pediátrica. Siempre se toma el tiempo necesario para escuchar a los niños y a sus padres, creando un entorno cómodo donde pueden expresar sus preocupaciones y preguntas. </string>
    <string name="solicitudes">Solicitudes</string>
    <string name="fecha">Fecha</string>

</resources>