<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/Columbia_blue3"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="102dp"
        android:layout_marginTop="111dp"
        android:layout_marginEnd="103dp"
        android:text="@string/medifast"
        android:textColor="@color/black"
        android:textSize="50sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="102dp"
        android:layout_marginEnd="100dp"
        android:text="@string/tu_salud_a_un_paso_de_distancia_citas_n_t_t_t_t_m_dicas_r_pidas_y_fiables"
        android:textColor="@color/Gris"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />



    <!-- Rectangle View to represent the rectangle -->

    <View
        android:id="@+id/rectangle"
        android:layout_width="350dp"
        android:layout_height="500dp"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="31dp"
        android:background="@drawable/rounded_rectangle_background"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <Button
        android:id="@+id/button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginEnd="50dp"
        android:layout_marginBottom="90dp"
        android:backgroundTint="@color/Sky_blue"
        android:text="@string/login"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="@+id/rectangle"
        app:layout_constraintEnd_toEndOf="@+id/rectangle"
        app:layout_constraintStart_toStartOf="@+id/rectangle" />

</androidx.constraintlayout.widget.ConstraintLayout>