<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/powder_blue"
    tools:context=".Pacientes">

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pacientes"
        android:textSize="50dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteY="60dp" />

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar2"
        android:layout_width="412dp"
        android:layout_height="554dp"
        android:background="?attr/colorPrimary"
        android:backgroundTint="@color/background"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteY="176dp" />

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar4"
        android:layout_width="411dp"
        android:layout_height="115dp"
        android:background="?attr/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="196dp"
        android:backgroundTint="@color/clarito"
        tools:ignore="MissingConstraints"/>
    <ImageButton
        android:id="@+id/imageButton2"
        android:layout_width="98dp"
        android:layout_height="72dp"
        android:layout_marginStart="16dp"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="212dp"
        tools:srcCompat="@tools:sample/avatars"
        tools:ignore="MissingConstraints" />


    <TextView
        android:id="@+id/nombre1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nombre"
        tools:layout_editor_absoluteX="141dp"
        tools:layout_editor_absoluteY="212dp" />


    <TextView
        android:id="@+id/correo1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/correo"
        tools:layout_editor_absoluteX="307dp"
        tools:layout_editor_absoluteY="210dp" />

    <TextView
        android:id="@+id/edad1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/edad"
        tools:layout_editor_absoluteX="141dp"
        tools:layout_editor_absoluteY="243dp" />


    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/celular"
        tools:layout_editor_absoluteX="143dp"
        tools:layout_editor_absoluteY="271dp" />


    <TextView
        android:id="@+id/textView9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/direccion"
        tools:layout_editor_absoluteX="305dp"
        tools:layout_editor_absoluteY="240dp" />


    <Button
        android:id="@+id/button6"
        android:layout_width="141dp"
        android:layout_height="41dp"
        android:text="Historial"
        tools:layout_editor_absoluteX="244dp"
        tools:layout_editor_absoluteY="262dp" />

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar5"
        android:layout_width="411dp"
        android:layout_height="104dp"
        android:background="?attr/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="372dp"
        android:backgroundTint="@color/clarito"/>
    <ImageButton
        android:id="@+id/imageButton3"
        android:layout_width="98dp"
        android:layout_height="72dp"
        android:layout_marginStart="16dp"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="383dp"
        tools:srcCompat="@tools:sample/avatars" />

    <TextView
        android:id="@+id/textView11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/edad"
        tools:layout_editor_absoluteX="143dp"
        tools:layout_editor_absoluteY="404dp" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nombre"
        tools:layout_editor_absoluteX="141dp"
        tools:layout_editor_absoluteY="385dp" />

    <TextView
        android:id="@+id/textView12"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/celular"
        tools:layout_editor_absoluteX="141dp"
        tools:layout_editor_absoluteY="436dp" />

    <TextView
        android:id="@+id/textView14"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/correo"
        tools:layout_editor_absoluteX="307dp"
        tools:layout_editor_absoluteY="383dp" />
    <TextView
        android:id="@+id/textView13"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/direccion"
        tools:layout_editor_absoluteX="305dp"
        tools:layout_editor_absoluteY="404dp" />

    <Button
        android:id="@+id/button7"
        android:layout_width="146dp"
        android:layout_height="41dp"
        android:text="Historial"
        tools:layout_editor_absoluteX="239dp"
        tools:layout_editor_absoluteY="435dp" />

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar6"
        android:layout_width="411dp"
        android:layout_height="113dp"
        android:background="?attr/colorPrimary"
        android:backgroundTint="@color/clarito"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="561dp" />

    <ImageButton
        android:id="@+id/imageButton3"
        android:layout_width="98dp"
        android:layout_height="72dp"
        android:layout_marginStart="16dp"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="573dp"
        tools:srcCompat="@tools:sample/avatars" />

    <TextView
        android:id="@+id/textView11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/edad"
        tools:layout_editor_absoluteX="143dp"
        tools:layout_editor_absoluteY="602dp" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nombre"
        tools:layout_editor_absoluteX="136dp"
        tools:layout_editor_absoluteY="573dp" />

    <TextView
        android:id="@+id/textView12"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/celular"
        tools:layout_editor_absoluteX="141dp"
        tools:layout_editor_absoluteY="633dp" />

    <TextView
        android:id="@+id/textView14"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/correo"
        tools:layout_editor_absoluteX="305dp"
        tools:layout_editor_absoluteY="573dp" />

    <TextView
        android:id="@+id/textView13"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/direccion"
        tools:layout_editor_absoluteX="291dp"
        tools:layout_editor_absoluteY="602dp" />

    <Button
        android:id="@+id/button7"
        android:layout_width="146dp"
        android:layout_height="41dp"
        android:text="Historial"
        tools:layout_editor_absoluteX="244dp"
        tools:layout_editor_absoluteY="621dp" />


</androidx.constraintlayout.widget.ConstraintLayout>